--- a/src/componentes/cliente/MitosLeyendas/MitosLeyendas.css
+++ b/src/componentes/cliente/MitosLeyendas/MitosLeyendas.css
@@ -8,7 +8,8 @@
     width: 100%;
     max-width: 1300px;
     margin: 0 auto;
-    position: relative;
+    position: relative;    
+    overflow: hidden;
 }
 
 .mitosLeyendas__texto{
